Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30208

Qt Creator sometimes doesn't detect the Android kits for Qt6.6.1 after installing the Android package.

XMLWordPrintable

    • Windows
    • d5a508899 (12.0)

      The Android kits for Qt 6.6.1 are not detected by Qt Creator on Windows 11.

      It states, "Failed to detect the ABIs used by the Qt version. Check the settings in Devices > Android for errors," even though everything appears correct, as shown in the pictures.

      The kits for Qt 6.5.3 versions are detected normally, even though they use the same build tools as the 6.6 versions, as mentioned in the documentation.

      As a workaround, deleting "CachedStores" folder at the following path  "C:\Users\<userName>\AppData\Local\QtProject\QtCreator\cache" has fixed the issue.

        1. image-2024-01-15-11-56-35-004.png
          89 kB
          Mehdi Belila
        2. image-2024-01-15-11-56-50-081.png
          74 kB
          Mehdi Belila
        For Gerrit Dashboard: QTCREATORBUG-30208
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes