QtSupport: Increase QtVersionData's version to 3

Qt Creator 12.0.0 has created presistent storage with empty QtAbis list.
Qt Creator 12.0.1 has fixed this issue.

By increasing the version number to 3 we force the saved data from Qt
Creator 12.0.0 to be recreated, and thus fix Android issues with empty
QtAbis lists.

Also make sure that an empty QtAbis is loaded.

Fixes: QTCREATORBUG-30208
Change-Id: I89a9a1ff810304127ff0387b80cb9a13f9740538
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>